fix: align title center

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -17,4 +17,6 @@ font-family: "Salsa", cursive; */
   background-size: cover;
   overflow: hidden;
   scroll-behavior: smooth;
+  text-align: center;
 }
+
